# robot-audition-experiments

./: README.md
src/hark_ros_turtlebot/: CMakeLists.txt  package.xml
src/hark_turtlebot_fdnetworks/: CMakeLists.txt  package.xml
src/hark_turtlebot_fdnetworks/experiment/: experiment.sh  start_turtlebot2.sh
src/hark_turtlebot_fdnetworks/experiment/HARK_test/: plotaoa.py  readme.txt
src/hark_turtlebot_fdnetworks/networks/: localization.n  localization_ROS.n  localization_offline.n
src/hark_turtlebot_fdnetworks/nodes/: localization.sh  localization_ROS.sh
src/hark_turtlebot_follower/: CMakeLists.txt  package.xml
src/hark_turtlebot_follower/src/: hark_turtlebot_follower.cpp
src/prepath_follow/: CMakeLists.txt  package.xml
src/prepath_follow/launch/: start_turtlebot.launch  start_turtlebot2.launch
src/prepath_follow/rviz/: path_follower.rviz
src/prepath_follow/src/: prepath_follow.cpp
src/turtlebot_move_simple/: CMakeLists.txt  package.xml
src/turtlebot_move_simple/src/: turtlebot_move_simple.cpp
