<?xml version="1.0"?>
<package>
  <name>hark_turtlebot_follower</name>
  <version>1.0.0</version>
  <description>The hark_turtlebot_follower package</description>

  <maintainer email="nguyenquan012@gmail.com">NGUYEN Van Quan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>hartk_ros_stacks_indigo</build_depend>
  <build_depend>hartk_ros_indigo</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>geometry_msgs</run_depend>

 
</package>
